# openfga-dsl-parser-python

./: Cargo.toml  README.md  pyproject.toml
src/: lib.rs
